--- a/public/css/app.css
+++ b/public/css/app.css
@@ -261,7 +261,52 @@ div.copyright {
 /* #region UI */
 /* button */
 button.button {
-
+  width: 100%;
+  margin: 2px 0;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  box-sizing: border-box;
+  outline: none;
+  cursor: pointer;
+  transition: background-color 0.2s;
+	-moz-transition: background-color 0.2s;
+	-webkit-transition: background-color 0.2s;
+	-o-transition: background-color 0.2s;
+	-ms-transition: background-color 0.2s;
+}
+button.auto {
+  width: auto !important;
+}
+button.button-info {
+	background: #3598db;
+	color: #fafafa;
+}
+button.button-info:hover {
+	background: #2283c3;
+}
+button.button-info-disabled {
+	background: #2283c3 !important;
+}
+button.button-success {
+	background: #5cbb2d;
+	color: #fafafa;
+}
+button.button-success:hover {
+	background: #51a428;
+}
+button.button-success-disabled {
+	background: #51a428 !important;
+}
+button.button-danger {
+	background: #db3333;
+	color: #fafafa;
+}
+button.button-danger:hover {
+	background: #c32222;
+}
+button.button-danger-disabled {
+	background: #c32222 !important;
 }
 
 /* #endregion */
@@ -288,8 +333,13 @@ div.banner p.text {
   color: #eee;
   text-shadow: 1px 1px 1px #666;
 }
+div.prompt {
+  padding: 24px;
+  background: #232323;
+  text-align: center;
+}
 div.introducts {
-  margin-top: 60px;
+  margin: 64px 0;
 }
 div.introduct {
   max-width: 800px;
