--- a/public/css/app.css
+++ b/public/css/app.css
@@ -359,11 +359,11 @@ div.prompt {
   text-align: center;
 }
 div.introducts {
-  margin: 64px 0;
+  margin: 64px 10px;
 }
 div.introduct {
   max-width: 800px;
-  margin: auto;
+  margin: 0 auto;
   padding: 8px 12px;
   border-radius: 4px;
   box-shadow: 0px 0px 4px 2px #eeeeee;
