--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30,9 +30,14 @@ div.footer-push {
 div.main {
   min-height: 640px;
 }
+div.main:after {
+  display: block;
+	clear: both;
+	content: "";
+}
 div.main-inner {
   max-width: 1080px;
-  margin: 12px auto 0 auto;
+  margin: 14px auto 0 auto;
 }
 .margin-const {
   margin: 0 10px;
@@ -40,6 +45,21 @@ div.main-inner {
 .padding-const {
   padding: 0 10px;
 }
+div.sidebar {
+  float: left;
+  width: 240px;
+}
+div.content {
+  margin-left: 250px;
+}
+.section {
+  margin-bottom: 10px;
+  padding: 8px 12px;
+  border-radius: 4px;
+  box-shadow: 0px 0px 4px 2px #eeeeee;
+  background: #fff;
+}
+
 
 /* #endregion */
 
@@ -154,7 +174,7 @@ ul.dialog-group:nth-child(n + 2) {
 li.dialog-item a {
   display: block;
   min-width: 140px;
-  padding: 12px 18px;
+  padding: 10px 18px;
   color: #666666;
   font-size: 12px;
   text-decoration: none;
@@ -231,6 +251,17 @@ div.copyright {
     display: none;
   }
 
+  div.sidebar {
+    float: none;
+    width: 100%;
+  }
+  div.content {
+    margin-left: 0;
+  }
+  .section-hide {
+    display: none;
+  }
+
   div.introduct > div {
     float: none !important;
     width: 100% !important;
@@ -254,16 +285,6 @@ div.copyright {
 }
 .height-large {
   height: 150px;
-}
-
-/* #endregion */
-
-/* #region common */
-.section {
-  padding: 8px 12px;
-  border-radius: 4px;
-  box-shadow: 0px 0px 4px 2px #eeeeee;
-  background: #fff;
 }
 
 /* #endregion */
