Add song infomation component

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -742,7 +742,30 @@ ul.user-statuses span.status-count:after {
 
 /* #region song-infomation */
 div.song-infomation {
-  margin: 18px 0;
+  margin: 18px 12px;
+}
+table.infomation-table {
+  width: 100%;
+  margin-top: 12px;
+  border-collapse: collapse;
+}
+table.infomation-table th {
+  padding: 6px 0;
+  border: 1px solid #ccc;
+  background: #eee;
+  font-weight: normal;
+	font-size: 12px;
+	text-align: center;
+}
+table.infomation-table td {
+  padding: 6px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+}
+table.infomation-table td:nth-child(2n+1) {
+  width: 120px;
+  background: #eee;
+	text-align: right;
 }
 
 /* #endregion */
