--- a/public/css/style.css
+++ b/public/css/style.css
@@ -775,20 +775,20 @@ table.infomation-table td:nth-child(2n+1) {
 /* #endregion */
 
 /* #region table */
-div.loading {
+div.load {
   display: table;
   width: 100%;
   height: 64px;
   border-bottom: 1px solid #eaeaea;
   text-align: center;
 }
-div.loading p {
+div.load p {
   display: table-cell;
   font-size: 12px;
   line-height: 64px;
   vertical-align: middle;
 }
-div.loading p img {
+div.load p img {
   display: block;
 	margin: 0 auto;
 	padding: 0;
