--- a/public/css/style.css
+++ b/public/css/style.css
@@ -774,66 +774,6 @@ table.infomation-table td:nth-child(2n+1) {
 
 /* #endregion */
 
-/* #region table */
-div.load {
-  display: table;
-  width: 100%;
-  height: 64px;
-  border-bottom: 1px solid #eaeaea;
-  text-align: center;
-}
-div.load p {
-  display: table-cell;
-  font-size: 12px;
-  line-height: 64px;
-  vertical-align: middle;
-}
-div.load p img {
-  display: block;
-	margin: 0 auto;
-	padding: 0;
-}
-
-div.pagination {
-  padding: 12px 0 12px 0;
-  text-align: center;
-}
-div.pagination a {
-  margin: 0 12px;
-  font-size: 14px;
-}
-div.pagination button.button {
-  font-size: 12px;
-}
-
-/* #endregion */
-
-/* #region music-table */
-table.music-table {
-  width: 100%;
-}
-table.music-table td.media-cell {
-	width: 48px;
-}
-table.music-table td.text-cell {
-	padding-left: 6px;
-}
-table.music-table td.text-cell p {
-  font-size: 14px;
-}
-table.music-table td.text-cell p.title {
-  margin: 0;
-  font-weight: bold;
-}
-table.music-table td.text-cell p.artist {
-  margin: 2px 0;
-}
-table.music-table td.action-cell {
-  width: 72px;
-}
-
-/* #endregion */
-
 /* #region statuses */
 div.statuses > div.status {
   padding: 6px 12px;
@@ -872,9 +812,64 @@ div.status p.text {
 div.status div.status-body {
   padding: 6px 4px;
   border: 1px solid #eee;
+  background: #fafafa;
 }
 div.status p.date {
   margin: 4px 0 0 4px;
+  font-size: 12px;
+}
+
+table.music-table {
+  width: 100%;
+}
+table.music-table td.media-cell {
+	width: 48px;
+}
+table.music-table td.text-cell {
+	padding-left: 6px;
+}
+table.music-table td.text-cell p {
+  font-size: 14px;
+}
+table.music-table td.text-cell p.title {
+  margin: 0;
+  font-weight: bold;
+}
+table.music-table td.text-cell p.artist {
+  margin: 2px 0;
+}
+table.music-table td.action-cell {
+  width: 72px;
+}
+
+
+div.load {
+  display: table;
+  width: 100%;
+  height: 67px;
+  text-align: center;
+}
+div.load p {
+  display: table-cell;
+  font-size: 12px;
+  line-height: 67px;
+  vertical-align: middle;
+}
+div.load p img {
+  display: block;
+	margin: 0 auto;
+	padding: 0;
+}
+
+div.pagination {
+  padding: 12px 0 12px 0;
+  text-align: center;
+}
+div.pagination a {
+  margin: 0 12px;
+  font-size: 14px;
+}
+div.pagination button.button {
   font-size: 12px;
 }
 
