--- a/public/css/style.css
+++ b/public/css/style.css
@@ -315,6 +315,39 @@ div.copyright {
     float: none !important;
     width: 100% !important;
   }
+
+  ul.user-statuses {
+    display: flex;
+  }
+  ul.user-statuses li {
+    width: 25%;
+    text-align: center;
+  }
+  ul.user-statuses li a {
+    height: 62px;
+    padding: 10px 2px !important;
+    border-bottom: 0px solid transparent;
+    transition: background-color 0.2s, border-color 0.2s !important;
+    -moz-transition: background-color 0.2s, border-color 0.2s !important;
+    -webkit-transition: background-color 0.2s, border-color 0.2s !important;
+    -o-transition: background-color 0.2s, border-color 0.2s !important;
+    -ms-transition: background-color 0.2s, border-color 0.2s !important;
+  }
+  ul.user-statuses li a:hover {
+    border-left: none !important;
+    border-bottom: 2px solid #999;
+  }
+  ul.user-statuses li.active a {
+    border-left: none !important;
+    border-bottom: 2px solid #666;
+  }
+  ul.user-statuses span.status-count {
+    float: none !important;;
+  }
+  ul.user-statuses span.status-count::before {
+    white-space: pre;
+    content: "\A";
+  }
 }
 /* 960px以下 */
 @media (max-width: 960px) {
@@ -743,7 +776,8 @@ ul.user-statuses li a {
   display: block;
   padding: 10px 12px;
   border-top: 1px solid #eaeaea;
-  border-left: 0px solid #fff;
+  border-left: 0px solid transparent;
+  box-sizing: border-box;
   font-size: 14px;
   transition: background-color 0.2s, border 0.2s;
 	-moz-transition: background-color 0.2s, border 0.2s;
@@ -752,11 +786,11 @@ ul.user-statuses li a {
   -ms-transition: background-color 0.2s, border 0.2s;
 }
 ul.user-statuses li a:hover {
-  border-left: 2px solid #999999;
+  border-left: 2px solid #999;
   background: #fafafa;
 }
 ul.user-statuses li.active a {
-  border-left: 2px solid #666666;
+  border-left: 2px solid #666;
   background: #f2f2f2;
 }
 ul.user-statuses span.status-count {
